[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/SoundPlayers/PlayerSound.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sound/Effects/Player/Attack1.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/Sound/Effects/Player/Attack2.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sound/Effects/Player/Attack3.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sound/Effects/Player/Critical.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sound/Effects/Player/Broken_armor.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sound/Effects/Player/Recover_armor.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sound/Effects/Player/click.ogg" type="AudioStream" id=8]

[node name="PlayerSound" type="Node"]
script = ExtResource( 1 )

[node name="Attack1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0

[node name="Attack2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="Attack3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="Critical" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -1.0

[node name="BrokenArmor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="RecoverArmor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="SwitchWeapon" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="NewWeapon" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
